# RAG-Chatbot

./: .gitignore  README.md
agents/: .env.example  README.md  agent.ipynb  agent.py  ingestion.ipynb  pyproject.toml
channels/: README.md  package.json
channels/src/: App.tsx  main.tsx
channels/src/components/: chat-message.tsx
channels/src/hooks/: use-chatbot.ts
